# Retail_forecasting

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: config.py  config.yaml
dashboards/: .gitkeep
data/interim/: .gitkeep
data/processed/: .gitkeep
models/: .gitkeep
notebooks/: .gitkeep
notebooks/EDA/: holidays_events_eda.ipynb  oil_eda.ipynb  sarima_diagnostic.ipynb  stationarity_eda.ipynb  stores_eda.ipynb  train_eda.ipynb  transactions_eda.ipynb
notebooks/data_exploration/: holidays_event_exploration.ipynb  oils_exploration.ipynb  strores_exploration.ipynb  train_exploration.ipynb  transactions_exploration.ipynb
reports/error_analysis/: .gitkeep
reports/figures/: .gitkeep
scripts/: evaluate.py  train.py  tune.py
src/: __init__.py
src/data/: __init__.py  load_data.py
src/evaluation/: __init__.py  evaluate.py  segment_analysis.py
src/features/: __init__.py  build_features.py
src/models/: __init__.py  train_model.py  tune_model.py
src/visualization/: __init__.py  plot_results.py
tests/: .gitkeep
