[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "retail_forecasting"
version = "0.1.0"
description = "Favorita Grocery Sales Forecasting project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "configs*"]
